--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="logo">
                 <img src="logo.png" alt="Quốc huy">
                 <h3>PHƯỜNG HỒNG BÀNG</h3>
-                <h4>BỘ QUỐC PHÒNG</h4>
+                <h4>BAN CHỈ HUY QUÂN SỰ</h4>
             </div>
             <div class="form-group">
                 <input type="text" id="taskInput" placeholder="Nội dung nhiệm vụ...">
